# meta-spliceai

./: .env.example  .gitignore  CONTRIBUTING.md  DOCUMENTATION.md  ENVIRONMENT_FILES.md  LICENSE  README.md  environment-gpu-minimal.yml  environment-linux.yml  environment-runpods-minimal.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: genomic_resources.yaml
demo/: permutation_test.py
docs/: PROJECT_SUMMARY.md  README.md
docs/analysis/: README.md  (+5 more)
gene_lists/: training_genes.txt  unseen_genes.txt
meta_spliceai/: __init__.py  biotype_classifier.py  create_query_uorfs.py  data_generation_workflow.py  data_pipeline.py  demo_extract_uorf.py  extract_junctions.py  extract_splicesites.py  fetch_gene_syns.py  run_base_model.py  run_data_generation_workflow.py  run_igv.py  run_test_retrieval.py  test_retrieval.py
predictions/: comprehensive_evaluation_summary.json  empirically_detected_score_adjustments.json  splice_site_adjustments.json
presentation/: Meta_Learning_With_Images.md  README.md
scripts/: AI_AGENT_RENAME_PROMPTS.md  PACKAGE_RENAME_GUIDE.md  QUICK_REFERENCE.md  README.md  README_f1_pr_analysis.md  SCRIPT_INVENTORY.md  analyze_overlapping_genes.py  analyze_splice_positions.py  analyze_training_data.py  build_for_fabric.sh  check_dataset.py  check_gpu.py  check_polars_version.py  check_versions.py  cleanup_artifacts.py  cleanup_predictions.sh  consolidate_sequences.py  deepspeed_patch.py  diagnose_gpu_environment.py  enhance_splice_sites.py  f1_pr_analysis_merged.py  final_cleanup.sh  fix_ml_dependencies.py  fresh_start_predictions.py  generate_gene_manifest.py  inspect_analysis_sequences.py  inspect_meta_model_training_data.py  inspect_parquet.py  manage_scripts.py  meta_model_concept_diagram.py  meta_model_concept_diagram_simplified.py  migrate_predictions.py  migrate_splicevardb_data.sh  migrate_splicevardb_to_case_studies.sh  migrate_variant_data.py  minimal_check.py  patch_gene_type.py  patch_structural_features.py  plot_splice_sites_hist.py  position_centric_data_repr_diagram.py  (+23 more)
src/: README.md
(+1391 files in other folders)
